--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card shadow-sm">
-          <img src="https://via.placeholder.com/400x200.png?text=Project+1" class="card-img-top" alt="Basic Cloud Hosting" />
+          <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Cloud Hosting" />
           <div class="card-body">
             <h5 class="card-title">Basic Cloud Hosting with AWS</h5>
             <p class="card-text">
@@ -111,10 +111,10 @@
           </div>
         </div>
       </div>
-      <!-- Add more project cards similarly -->
+      
       <div class="col-md-4">
         <div class="card shadow-sm">
-          <img src="https://via.placeholder.com/400x200.png?text=Project+2" class="card-img-top" alt="Penetration Testing" />
+          <img src="https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Penetration Testing" />
           <div class="card-body">
             <h5 class="card-title">Penetration Testing Lab</h5>
             <p class="card-text">
@@ -124,9 +124,10 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <div class="card shadow-sm">
-          <img src="https://via.placeholder.com/400x200.png?text=Project+3" class="card-img-top" alt="Threat Intelligence" />
+          <img src="https://images.unsplash.com/photo-1624953587687-9c8a5dfbcb0d?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Threat Intelligence" />
           <div class="card-body">
             <h5 class="card-title">Cyber Threat Intelligence</h5>
             <p class="card-text">
@@ -139,6 +140,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- Contact Section -->
 <section id="contact" class="container">
