--- a/index.html
+++ b/index.html
@@ -3,67 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aditya Kumar | Cybersecurity Analyst</title>
+  <title><h1>Hello, I'm Aditya Kumar</h1>
+<p>Master's Student | Cybersecurity & Cloud Enthusiast | Skilled in Networking, Linux, AWS & Threat Intelligence</p>
+</title>
 
-  <!-- Bootstrap CSS CDN -->
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
 
   <style>
     body {
+      background-color: #121212;
+      color: #e0e0e0;
       font-family: 'Poppins', sans-serif;
-      scroll-behavior: smooth;
+    }
+    nav, footer {
+      background-color: #1e1e1e;
+    }
+    .navbar-brand, .nav-link, footer p {
+      color: #bbb !important;
     }
     header {
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      color: white;
+      background: linear-gradient(135deg, #1f1c2c, #928dab);
       min-height: 100vh;
       display: flex;
-      flex-direction: column;
+      align-items: center;
       justify-content: center;
       text-align: center;
+      color: #fff;
     }
     header h1 {
-      font-weight: 700;
       font-size: 3.5rem;
+      font-weight: 600;
     }
     header p {
-      font-size: 1.25rem;
-      margin-bottom: 2rem;
+      font-size: 1.2rem;
+    }
+    .btn-primary {
+      background-color: #7f5af0;
+      border: none;
+    }
+    .btn-primary:hover {
+      background-color: #6245c6;
     }
     section {
       padding: 4rem 0;
     }
-    .nav-link {
-      font-weight: 600;
+    .card {
+      background-color: #1e1e1e;
+      color: #ccc;
+      border: none;
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 15px rgba(127, 90, 240, 0.3);
+    }
+    .card img {
+      height: 200px;
+      object-fit: cover;
     }
     footer {
-      background: #2c2c2c;
-      color: #bbb;
       padding: 1rem 0;
       text-align: center;
     }
-    .card:hover {
-      box-shadow: 0 0 20px rgba(118, 75, 162, 0.7);
-      transition: box-shadow 0.3s ease-in-out;
+    input, textarea {
+      background-color: #2a2a2a !important;
+      border: none !important;
+      color: #fff !important;
     }
   </style>
 </head>
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
+<nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Aditya Kumar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
@@ -71,94 +94,82 @@
   </div>
 </nav>
 
-<!-- Hero Section -->
-<header id="hero">
+<!-- Hero -->
+<header>
   <div class="container">
     <h1>Hello, I'm Aditya Kumar</h1>
     <p>Cybersecurity Analyst | Linux Enthusiast | AWS Learner</p>
-    <a href="#projects" class="btn btn-light btn-lg">View My Work</a>
+    <a href="#projects" class="btn btn-primary mt-3">View My Work</a>
   </div>
 </header>
 
-<!-- About Section -->
+<!-- About -->
 <section id="about" class="container">
-  <h2 class="text-center mb-5">About Me</h2>
+  <h2 class="text-center mb-4">About Me</h2>
   <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-md-8 text-center">
       <p>
-        I am an aspiring cybersecurity analyst passionate about protecting digital assets and
-        learning new technologies. Skilled in Linux, AWS cloud services, threat intelligence, and
-        penetration testing. Currently focused on expanding my expertise in cloud security and open-source intelligence.
+        I am a cybersecurity enthusiast with hands-on experience in Linux, AWS, and penetration testing.
+        Passionate about securing digital infrastructures and continuously learning new technologies to stay ahead in the cyber world.
       </p>
     </div>
   </div>
 </section>
 
-<!-- Projects Section -->
-<section id="projects" class="bg-light">
-  <div class="container">
-    <h2 class="text-center mb-5">My Projects</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Cloud Hosting" />
-          <div class="card-body">
-            <h5 class="card-title">Basic Cloud Hosting with AWS</h5>
-            <p class="card-text">
-              Setup of EC2 instance, configuration of Nginx server, IAM policies, and S3 storage.
-            </p>
-            <a href="#" class="btn btn-primary" target="_blank">View Details</a>
-          </div>
+<!-- Projects -->
+<section id="projects" class="container">
+  <h2 class="text-center mb-5">Projects</h2>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Cloud Hosting" />
+        <div class="card-body">
+          <h5 class="card-title">AWS Cloud Hosting</h5>
+          <p class="card-text">Launched EC2 instances, configured NGINX, and managed cloud storage via S3.</p>
+          <a href="#" class="btn btn-primary btn-sm">View Project</a>
         </div>
       </div>
-      
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <img src="https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Penetration Testing" />
-          <div class="card-body">
-            <h5 class="card-title">Penetration Testing Lab</h5>
-            <p class="card-text">
-              Practical lab environment to simulate cyber attacks and learn security defense.
-            </p>
-            <a href="#" class="btn btn-primary" target="_blank">View Details</a>
-          </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1603791440384-56cd371ee9a7?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Pen Testing" />
+        <div class="card-body">
+          <h5 class="card-title">Pentesting Lab</h5>
+          <p class="card-text">Created a simulated environment to run vulnerability assessments and exploits.</p>
+          <a href="#" class="btn btn-primary btn-sm">View Project</a>
         </div>
       </div>
-
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <img src="https://images.unsplash.com/photo-1624953587687-9c8a5dfbcb0d?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Threat Intelligence" />
-          <div class="card-body">
-            <h5 class="card-title">Cyber Threat Intelligence</h5>
-            <p class="card-text">
-              Research and analysis on cyber threats, monitoring emerging attack vectors.
-            </p>
-            <a href="#" class="btn btn-primary" target="_blank">View Details</a>
-          </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1624953587687-9c8a5dfbcb0d?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Threat Intel" />
+        <div class="card-body">
+          <h5 class="card-title">Threat Intelligence</h5>
+          <p class="card-text">Analyzed threat feeds, OSINT tools, and emerging cyber attack patterns.</p>
+          <a href="#" class="btn btn-primary btn-sm">View Project</a>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-
-<!-- Contact Section -->
+<!-- Contact -->
 <section id="contact" class="container">
-  <h2 class="text-center mb-5">Contact Me</h2>
+  <h2 class="text-center mb-4">Contact Me</h2>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <form action="https://formspree.io/f/mrbqjwql" method="POST">
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required />
+          <input type="text" id="name" name="name" class="form-control" required />
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="_replyto" placeholder="name@example.com" required />
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" name="_replyto" class="form-control" required />
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" name="message" rows="4" placeholder="Write your message here..." required></textarea>
+          <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary w-100">Send Message</button>
       </form>
@@ -169,11 +180,11 @@
 <!-- Footer -->
 <footer>
   <div class="container">
-    <p>&copy; 2025 Aditya Kumar. All rights reserved.</p>
+    <p>&copy; 2025 Aditya Kumar | All Rights Reserved</p>
   </div>
 </footer>
 
-<!-- Bootstrap JS Bundle with Popper -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
