--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><h1>Hello, I'm Aditya Kumar</h1>
-<p>Master's Student | Cybersecurity & Cloud Enthusiast | Skilled in Networking, Linux, AWS & Threat Intelligence</p>
-</title>
+  <title>Aditya Kumar | Master's Student in Cybersecurity & Cloud | Networking | AWS | Linux | Threat Intelligence</title>
 
 
   <!-- Bootstrap CSS -->
