--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aditya Kumar | Master's Student in Cybersecurity & Cloud | Networking | AWS | Linux | Threat Intelligence</title>
-
-
+  <body>
+  <h1>Hello, I'm Aditya Kumar</h1>
+  <p>Master's Student | Cybersecurity & Cloud Enthusiast | Skilled in Networking, Linux, AWS & Threat Intelligence</p>
+  </body>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
