--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="row g-4">
     <div class="col-md-4">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1558655146-d09347e92766?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Cloud Hosting" />
+        <img src="https://wallpapercave.com/amazon-web-services-wallpapers?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="Cloud Hosting" />
         <div class="card-body">
           <h5 class="card-title">AWS Cloud Hosting</h5>
           <p class="card-text">Launched EC2 instances, configured NGINX, and managed cloud storage via S3.</p>
