--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="social">
       <a href="https://linkedin.com/in/kumaraditya766899" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/0x1337adi" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="mailto:your@email.com"><i class="fas fa-envelope"></i></a>
+      <a href="mailto:kumaraditya766899@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
   </div>
 
