--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
   <style>
     :root {
@@ -17,6 +18,7 @@
       --text-light: #0e0e0e;
       --accent: #00ccff;
     }
+
     html[data-theme="dark"] {
       background-color: var(--bg-dark);
       color: var(--text-dark);
@@ -32,7 +34,6 @@
       scroll-behavior: smooth;
     }
 
-    /* Navbar */
     nav {
       display: flex;
       justify-content: space-between;
@@ -72,6 +73,7 @@
       flex: 1 1 400px;
       max-width: 400px;
       padding: 20px;
+      opacity: 0;
     }
 
     .right img {
@@ -83,6 +85,7 @@
     .left {
       flex: 2 1 500px;
       padding: 20px;
+      opacity: 0;
     }
 
     .left h1 {
@@ -141,7 +144,7 @@
 
     .card img {
       width: 100%;
-      height: 160px;
+      height: 180px;
       object-fit: cover;
     }
 
@@ -185,6 +188,16 @@
       cursor: pointer;
     }
 
+    .blinking-cursor {
+      font-weight: bold;
+      color: var(--accent);
+      animation: blink 0.7s steps(1) infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0; }
+    }
+
     @media(max-width: 768px) {
       .container {
         flex-direction: column-reverse;
@@ -201,9 +214,7 @@
     <a href="#home">Home</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
-    <button class="toggle-btn" onclick="toggleTheme()" title="Toggle Theme">
-      🌓
-    </button>
+    <button class="toggle-btn" onclick="toggleTheme()" title="Toggle Theme">🌓</button>
   </div>
 </nav>
 
@@ -212,7 +223,7 @@
   <div class="left">
     <span>Hey, I'm Aditya</span>
     <h1>
-      I am a <span class="green">{Cybersecurity Enthusiast || Cloud Explorer || Linux Learner }</span>, <br>
+      I am a <span class="green" id="typing"></span><span class="blinking-cursor">|</span><br>
       I love to <span class="green">Build || Secure || Deploy</span>
     </h1>
     <p>
@@ -221,7 +232,7 @@
 
     <div class="tech-icons">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux" />
-      <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" />
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" alt="Bash" />
@@ -244,24 +255,24 @@
   <h2>My Projects</h2>
   <div class="project-cards">
     <div class="card">
-      <img src="https://source.unsplash.com/600x400/?cybersecurity,terminal" alt="Threat Detection" />
+      <img src="https://source.unsplash.com/600x400/?cybersecurity" alt="Project 1" />
       <div class="card-content">
         <h3>Threat Detection System</h3>
         <p>Built a threat intel system using Python & open-source feeds.</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://source.unsplash.com/600x400/?cloud,server" alt="AWS Automation" />
+      <img src="https://source.unsplash.com/600x400/?cloud,aws" alt="Project 2" />
       <div class="card-content">
         <h3>AWS Automation</h3>
         <p>Automated EC2 backup and monitoring using AWS CLI and Lambda.</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://source.unsplash.com/600x400/?linux,code" alt="Linux Hardening" />
+      <img src="https://source.unsplash.com/600x400/?sql,database" alt="Project 3" />
       <div class="card-content">
         <h3>Timetable Management System</h3>
-        <p>A small School/College Timetable Managing system using sql.</p>
+        <p>A School/College Timetable system using SQL.</p>
       </div>
     </div>
   </div>
@@ -278,7 +289,10 @@
   </form>
 </section>
 
-<!-- JS: Toggle Theme -->
+<!-- Typing Audio -->
+<audio id="typeSound" src="https://www.fesliyanstudios.com/play-mp3/387"></audio>
+
+<!-- JavaScript -->
 <script>
   function toggleTheme() {
     const html = document.documentElement;
@@ -292,6 +306,43 @@
     const saved = localStorage.getItem("theme");
     if (saved) document.documentElement.setAttribute("data-theme", saved);
   })();
+
+  const texts = ["Cybersecurity Enthusiast", "Cloud Explorer", "Linux Learner"];
+  let count = 0, index = 0, currentText = '', letter = '';
+  const typingEl = document.getElementById("typing");
+  const audio = document.getElementById("typeSound");
+
+  function type() {
+    if (count === texts.length) count = 0;
+    currentText = texts[count];
+    letter = currentText.slice(0, ++index);
+    typingEl.textContent = letter;
+    audio.currentTime = 0;
+    audio.play();
+
+    if (letter.length === currentText.length) {
+      setTimeout(() => erase(), 2000);
+    } else {
+      setTimeout(type, 100);
+    }
+  }
+
+  function erase() {
+    if (index > 0) {
+      letter = currentText.slice(0, --index);
+      typingEl.textContent = letter;
+      setTimeout(erase, 50);
+    } else {
+      count++;
+      setTimeout(type, 200);
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", function () {
+    setTimeout(type, 500);
+    gsap.to(".left", { duration: 1.2, opacity: 1, x: 0, ease: "power2.out" });
+    gsap.to(".right", { duration: 1.2, opacity: 1, y: 0, delay: 0.5, ease: "power2.out" });
+  });
 </script>
 
 </body>
