--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <style>
     :root {
       --bg-dark: #0e0e0e;
-      --bg-light: #f5f5f5;
-      --text-dark: #00ffff;
-      --text-light: #0e0e0e;
-      --accent: #00ccff;
+      --bg-light: #e6f0ff;
+      --text-dark: #ffffff;
+      --text-light: #111111;
+      --accent: #4169e1; /* Royal Blue */
     }
 
     html[data-theme="dark"] {
@@ -73,19 +73,17 @@
       flex: 1 1 400px;
       max-width: 400px;
       padding: 20px;
-      opacity: 0;
     }
 
     .right img {
       width: 100%;
       border-radius: 20px;
-      border: 4px solid #2e2e2e;
+      border: 4px solid var(--accent);
     }
 
     .left {
       flex: 2 1 500px;
       padding: 20px;
-      opacity: 0;
     }
 
     .left h1 {
@@ -131,7 +129,7 @@
     }
 
     .card {
-      background-color: rgba(0,0,0,0.1);
+      background-color: rgba(0, 0, 0, 0.1);
       border: 2px solid var(--accent);
       border-radius: 10px;
       overflow: hidden;
@@ -144,7 +142,7 @@
 
     .card img {
       width: 100%;
-      height: 180px;
+      height: 160px;
       object-fit: cover;
     }
 
@@ -174,24 +172,25 @@
     .contact-form input:focus,
     .contact-form textarea:focus {
       outline: none;
-      border-color: #00ccff;
-      box-shadow: 0 0 8px #00ffff66;
+      border-color: var(--accent);
+      box-shadow: 0 0 8px var(--accent);
     }
 
     .contact-form button {
       padding: 12px;
       background-color: var(--accent);
-      color: black;
+      color: white;
       border: none;
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
     }
 
-    .blinking-cursor {
-      font-weight: bold;
-      color: var(--accent);
-      animation: blink 0.7s steps(1) infinite;
+    .cursor {
+      display: inline-block;
+      width: 10px;
+      background-color: var(--accent);
+      animation: blink 1s step-start infinite;
     }
 
     @keyframes blink {
@@ -221,31 +220,31 @@
 <!-- Hero Section -->
 <section class="container" id="home">
   <div class="left">
-    <span>Hey, I'm Aditya</span>
-    <h1>
-      I am a <span class="green" id="typing"></span><span class="blinking-cursor">|</span><br>
+    <span class="fade-in">Hey, I'm Aditya<span class="cursor">|</span></span>
+    <h1 class="fade-in">
+      I am a <span class="green">{Cybersecurity Enthusiast || Cloud Explorer || Linux Learner }</span><br>
       I love to <span class="green">Build || Secure || Deploy</span>
     </h1>
-    <p>
+    <p class="fade-in">
       With expertise in <span class="green">AWS, SQL, Threat Intelligence, Networking</span> and a strong background in Linux and Cybersecurity.
     </p>
 
-    <div class="tech-icons">
+    <div class="tech-icons fade-in">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux" />
-      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS" />
+      <img src="https://img.icons8.com/color/48/000000/amazon-web-services.png" width="40" alt="AWS" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" />
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" alt="Bash" />
     </div>
 
-    <div class="social">
+    <div class="social fade-in">
       <a href="https://linkedin.com/in/kumaraditya766899" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/0x1337adi" target="_blank"><i class="fab fa-github"></i></a>
       <a href="mailto:kumaraditya766899@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
   </div>
 
-  <div class="right">
+  <div class="right fade-in">
     <img src="866cd002-0aa0-4efc-9e5b-c9ee63ed03fe.png" alt="Aditya" />
   </div>
 </section>
@@ -254,25 +253,25 @@
 <section class="projects" id="projects">
   <h2>My Projects</h2>
   <div class="project-cards">
-    <div class="card">
-      <img src="https://source.unsplash.com/600x400/?cybersecurity" alt="Project 1" />
+    <div class="card fade-in">
+      <img src="https://source.unsplash.com/600x400/?cybersecurity" alt="Threat Detection" />
       <div class="card-content">
         <h3>Threat Detection System</h3>
         <p>Built a threat intel system using Python & open-source feeds.</p>
       </div>
     </div>
-    <div class="card">
-      <img src="https://source.unsplash.com/600x400/?cloud,aws" alt="Project 2" />
+    <div class="card fade-in">
+      <img src="https://source.unsplash.com/600x400/?cloud,aws" alt="AWS Automation" />
       <div class="card-content">
         <h3>AWS Automation</h3>
         <p>Automated EC2 backup and monitoring using AWS CLI and Lambda.</p>
       </div>
     </div>
-    <div class="card">
-      <img src="https://source.unsplash.com/600x400/?sql,database" alt="Project 3" />
+    <div class="card fade-in">
+      <img src="https://source.unsplash.com/600x400/?sql,database" alt="Timetable System" />
       <div class="card-content">
         <h3>Timetable Management System</h3>
-        <p>A School/College Timetable system using SQL.</p>
+        <p>A small School/College Timetable Managing system using SQL.</p>
       </div>
     </div>
   </div>
@@ -289,10 +288,7 @@
   </form>
 </section>
 
-<!-- Typing Audio -->
-<audio id="typeSound" src="https://www.fesliyanstudios.com/play-mp3/387"></audio>
-
-<!-- JavaScript -->
+<!-- Theme Toggle Script -->
 <script>
   function toggleTheme() {
     const html = document.documentElement;
@@ -306,43 +302,19 @@
     const saved = localStorage.getItem("theme");
     if (saved) document.documentElement.setAttribute("data-theme", saved);
   })();
+</script>
 
-  const texts = ["Cybersecurity Enthusiast", "Cloud Explorer", "Linux Learner"];
-  let count = 0, index = 0, currentText = '', letter = '';
-  const typingEl = document.getElementById("typing");
-  const audio = document.getElementById("typeSound");
-
-  function type() {
-    if (count === texts.length) count = 0;
-    currentText = texts[count];
-    letter = currentText.slice(0, ++index);
-    typingEl.textContent = letter;
-    audio.currentTime = 0;
-    audio.play();
-
-    if (letter.length === currentText.length) {
-      setTimeout(() => erase(), 2000);
-    } else {
-      setTimeout(type, 100);
-    }
-  }
-
-  function erase() {
-    if (index > 0) {
-      letter = currentText.slice(0, --index);
-      typingEl.textContent = letter;
-      setTimeout(erase, 50);
-    } else {
-      count++;
-      setTimeout(type, 200);
-    }
-  }
-
-  document.addEventListener("DOMContentLoaded", function () {
-    setTimeout(type, 500);
-    gsap.to(".left", { duration: 1.2, opacity: 1, x: 0, ease: "power2.out" });
-    gsap.to(".right", { duration: 1.2, opacity: 1, y: 0, delay: 0.5, ease: "power2.out" });
-  });
+<!-- GSAP Animations -->
+<script>
+  window.onload = () => {
+    gsap.from(".fade-in", {
+      opacity: 0,
+      y: 40,
+      duration: 1,
+      stagger: 0.3,
+      ease: "power2.out"
+    });
+  };
 </script>
 
 </body>
